force-app/main/default/objects/IIT_Student_Blue_Print__c/IIT_Student_Blue_Print__c.object-meta.xml
<CustomObject>
    <label>Student Blue Print</label>
    <nameField>
        <displayFormat>SBP-{0000}</displayFormat>
        <label>Student Blue Print Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Blue Prints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>