force-app/main/default/objects/IIT_Student_Blue_Print__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Student Blue Prints</relationshipLabel>
    <relationshipName>Student_Blue_Prints</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>