force-app/main/default/objects/IIT_Student_Blue_Print__c/fields/Course1_FY1__c.field-meta.xml
<CustomField>
    <fullName>Course1_FY1__c</fullName>
    <label>Course1-FY1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>