force-app/main/default/objects/IIT_Student_Blue_Print__c/fields/Course1_SY2__c.field-meta.xml
<CustomField>
    <fullName>Course1_SY2__c</fullName>
    <label>Course1-SY2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>