force-app/main/default/objects/IIT_Student_Blue_Print__c/fields/Course1_SY2_Hours__c.field-meta.xml
<CustomField>
    <fullName>Course1_SY2_Hours__c</fullName>
    <label>Course1-SY2-Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>