force-app/main/default/objects/IIT_Student_Blue_Print__c/fields/Course2_SY1__c.field-meta.xml
<CustomField>
    <fullName>Course2_SY1__c</fullName>
    <label>Course2-SY1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>