force-app/main/default/objects/IIT_Student_Blue_Print__c/fields/Course_FY1_TotalHours__c.field-meta.xml
<CustomField>
    <fullName>Course_FY1_TotalHours__c</fullName>
    <formula>Course1_FY1_Hours__c + Course2_FY1_Hours__c + Course3_FY1_Hours__c + Course4_FY1_Hours__c + Course5_FY1_Hours__c + Course6_FY1_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course-FY1-TotalHours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>