force-app/main/default/objects/IIT_Student_Blue_Print__c/fields/Course_SY1_TotalHours__c.field-meta.xml
<CustomField>
    <fullName>Course_SY1_TotalHours__c</fullName>
    <formula>Course1_SY1_Hours__c + Course2_SY1_Hours__c + Course3_SY1_Hours__c + Course4_SY1_Hours__c + Course5_SY1_Hours__c + Course6_SY1_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course-SY1-TotalHours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>