force-app/main/default/objects/IIT_Student_Blue_Print__c/fields/ElevateProgram1_SY1_Hours__c.field-meta.xml
<CustomField>
    <fullName>ElevateProgram1_SY1_Hours__c</fullName>
    <label>ElevateProgram1-SY1-Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>