force-app/main/default/objects/IIT_Student_Blue_Print__c/fields/ElevateProgram1_SY2__c.field-meta.xml
<CustomField>
    <fullName>ElevateProgram1_SY2__c</fullName>
    <label>ElevateProgram1-SY2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>