force-app/main/default/objects/IIT_Student_Blue_Print__c/fields/ElevateProgram2_FY1__c.field-meta.xml
<CustomField>
    <fullName>ElevateProgram2_FY1__c</fullName>
    <label>ElevateProgram2-FY1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>