force-app/main/default/objects/IIT_Student_Blue_Print__c/fields/ElevateProgram_FY1_TotalHours__c.field-meta.xml
<CustomField>
    <fullName>ElevateProgram_FY1_TotalHours__c</fullName>
    <formula>ElevateProgram1_FY1_Hours__c + ElevateProgram2_FY1_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ElevateProgram-FY1-TotalHours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>